fix: overlapping of the logo (#4939)

--- a/app/styles/pages/public-event.scss
+++ b/app/styles/pages/public-event.scss
@@ -63,7 +63,7 @@
 
           .logo {
             max-height: 100px;
-            max-width: 300px;
+            max-width: 260px;
           }
 
           .event {
